--- a/pom.xml
+++ b/pom.xml
@@ -45,22 +45,18 @@
         <module>dubbo-samples-stub</module>
         <module>dubbo-samples-validation</module>
         <module>dubbo-samples-version</module>
-        <module>dubbo-samples-docker</module>
         <module>dubbo-samples-context</module>
         <module>dubbo-samples-http</module>
         <module>dubbo-samples-api</module>
-        <module>dubbo-samples-spring-hystrix</module>
-        <module>dubbo-samples-spring-boot-hystrix</module>
         <module>dubbo-samples-monitor</module>
         <module>dubbo-samples-zookeeper</module>
         <module>dubbo-samples-multi-registry</module>
         <module>dubbo-samples-switch-serialization-thread</module>
-        <module>dubbo-samples-scala</module>
     </modules>
 
     <properties>
-        <source.level>1.8</source.level>
-        <target.level>1.8</target.level>
+        <source.level>1.7</source.level>
+        <target.level>1.7</target.level>
         <spring.version>4.3.16.RELEASE</spring.version>
         <dubbo.version>2.6.2</dubbo.version>
         <dubbo.rpc.version>2.6.2</dubbo.rpc.version>
@@ -70,7 +66,6 @@
         <resteasy.version>3.0.19.Final</resteasy.version>
         <curator-client.version>2.12.0</curator-client.version>
         <swagger.version>1.5.19</swagger.version>
-        <spring-boot.version>1.5.13.RELEASE</spring-boot.version>
     </properties>
 
     <dependencyManagement>
@@ -128,14 +123,6 @@
                 <artifactId>swagger-jaxrs</artifactId>
                 <version>${swagger.version}</version>
             </dependency>
-            <dependency>
-                <!-- Import dependency management from Spring Boot -->
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -161,21 +148,22 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.2</version>
                 <configuration>
                     <source>${source.level}</source>
                     <target>${target.level}</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <!-- 资源文件拷贝插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
         </plugins>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-maven-plugin</artifactId>
-                    <version>${spring-boot.version}</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
     </build>
 </project>
